show message when user is wrong

--- a/src/containers/layout/privatelayout.css
+++ b/src/containers/layout/privatelayout.css
@@ -2,13 +2,14 @@
     bottom: 0px;
     padding: 0px;
     margin: 0px;
+    /* border-top: 5px solid red; */
 }
 
 .menu{
     top: 0px;
     padding: 0px;
     margin: 0px;
-    
+   
 }
 
 .borderRightLeft{
