--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   color: #333;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -19,4 +20,8 @@ input.form-control {
 }
 input[type=file] {
   width: 100%;
+}
+
+.mwarning{
+  color: red;
 }
